// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common css renders background color 1`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
        background-color: #007a41ff;
      ",
  "toString": [Function],
}
`;

exports[`Common css renders background color 2`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
        background-color: #c2c2c2ff;
      ",
  "toString": [Function],
}
`;

exports[`Common css renders background color 3`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
      background-color: #123321;
    ",
  "toString": [Function],
}
`;

exports[`Common css renders circle shape 1`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    width: 32px;
    height: 32px;
    font-size: 14px;
    line-height: 22px;
    border-radius: 50%;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders circle shape 2`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    width: 40px;
    height: 40px;
    font-size: 14px;
    line-height: 22px;
    border-radius: 50%;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders circle shape 3`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    width: 64px;
    height: 64px;
    font-size: 24px;
    line-height: 32px;
    border-radius: 50%;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders container 1`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    
        background-color: #007a41ff;
      ;;
    display: inline-flex;
    overflow: hidden;
    word-wrap: break-word;
    white-space: nowrap;
    color: #ffffffff;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 4px;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders container 2`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    
        background-color: #c2c2c2ff;
      ;;
    display: inline-flex;
    overflow: hidden;
    word-wrap: break-word;
    white-space: nowrap;
    color: #ffffffff;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 4px;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders container 3`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    
      background-color: #123321;
    ;;
    display: inline-flex;
    overflow: hidden;
    word-wrap: break-word;
    white-space: nowrap;
    color: #ffffffff;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 4px;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders merge 1`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    
    
        background-color: #c2c2c2ff;
      ;;
    display: inline-flex;
    overflow: hidden;
    word-wrap: break-word;
    white-space: nowrap;
    color: #ffffffff;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 4px;
  ;;
    
    width: 64px;
    height: 64px;
    font-size: 24px;
    line-height: 32px;
    border-radius: 8px;
  ;;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders merge 2`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    
    
        background-color: #c2c2c2ff;
      ;;
    display: inline-flex;
    overflow: hidden;
    word-wrap: break-word;
    white-space: nowrap;
    color: #ffffffff;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 4px;
  ;;
    
    width: 64px;
    height: 64px;
    font-size: 24px;
    line-height: 32px;
    border-radius: 8px;
  ;;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders merge 3`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    
    
        background-color: #c2c2c2ff;
      ;;
    display: inline-flex;
    overflow: hidden;
    word-wrap: break-word;
    white-space: nowrap;
    color: #ffffffff;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    padding: 4px;
  ;;
    
    width: 64px;
    height: 64px;
    font-size: 24px;
    line-height: 32px;
    border-radius: 8px;
  ;;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders size 1`] = `
{
  "0": "32px",
  "1": "32px",
  "2": "14px",
  "3": "22px",
}
`;

exports[`Common css renders size 2`] = `
{
  "0": "40px",
  "1": "40px",
  "2": "14px",
  "3": "22px",
}
`;

exports[`Common css renders size 3`] = `
{
  "0": "64px",
  "1": "64px",
  "2": "24px",
  "3": "32px",
}
`;

exports[`Common css renders square shape 1`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    width: 32px;
    height: 32px;
    font-size: 14px;
    line-height: 22px;
    border-radius: 8px;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders square shape 2`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    width: 40px;
    height: 40px;
    font-size: 14px;
    line-height: 22px;
    border-radius: 8px;
  ",
  "toString": [Function],
}
`;

exports[`Common css renders square shape 3`] = `
{
  "map": undefined,
  "next": undefined,
  "styles": "
    width: 64px;
    height: 64px;
    font-size: 24px;
    line-height: 32px;
    border-radius: 8px;
  ",
  "toString": [Function],
}
`;
